--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- top header -->
 	<header class="theme_bg flex_space_around sticky_top">
 		<div class="logo">
-			<img src="img/icons/ic_192.png" class="full_dims">
+			<img src="img/icons/ic_192.png" class="full_dims" alt="logo">
 		</div>
 	</header>
 
